--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css"
 			rel="stylesheet" />
 	</head>
-	<body class="bg-gray-900">
+	<body class="bg-slate-950">
 		<div id="root"></div>
 		<script
 			type="module"
